--- a/TrackMySleepQuality-Starter/app/src/main/res/layout/fragment_sleep_tracker.xml
+++ b/TrackMySleepQuality-Starter/app/src/main/res/layout/fragment_sleep_tracker.xml
@@ -71,6 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/margin"
+            android:enabled="@{sleepTrackerViewModel.startButtonVisible}"
             android:text="@string/start"
             android:onClick="@{() -> sleepTrackerViewModel.onStartTracking()}"
             app:layout_constraintBaseline_toBaselineOf="@id/stop_button"
@@ -85,6 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin"
             android:layout_marginEnd="@dimen/margin"
+            android:enabled="@{sleepTrackerViewModel.stopButtonVisible}"
             android:text="@string/stop"
             android:onClick="@{() -> sleepTrackerViewModel.onStopTracking()}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -99,6 +101,7 @@
             android:layout_marginStart="@dimen/margin"
             android:layout_marginEnd="@dimen/margin"
             android:layout_marginBottom="@dimen/margin"
+            android:enabled="@{sleepTrackerViewModel.clearButtonVisible}"
             android:text="@string/clear"
             android:onClick="@{() -> sleepTrackerViewModel.onClear()}"
             app:layout_constraintBottom_toBottomOf="parent"
